tolerate missing scopes

--- a/slack-app/manifest.yml
+++ b/slack-app/manifest.yml
@@ -10,11 +10,14 @@ oauth_config:
   scopes:
     user:
       - users.profile:read
+
       # write needed to write custom status
       - users.profile:write
-      - users:read
       # write needed to update presence information
       - users:write
+
+      # optional scope, if this is granted you will see presence information on the `user` action
+      - users:read
 settings:
   org_deploy_enabled: false
   socket_mode_enabled: false
